# github_events_api

./: .pre-commit-config.yaml  Makefile  README.md  api_app.py  download_data.py  main.py  pyproject.toml  repositories.yaml
docs/: openapi.json  openapi.py  openapi.yaml
github_events_api/: __init__.py  calculations.py  configuation.py  constants.py  data_storage.py  github_api.py
tests/: conftest.py
tests/data/: repo_config_over_5.yaml  repo_config_under_5.yaml
tests/fixtures/: data.py
tests/github_events_api/: test_calculations.py  test_configuration.py  test_github_api.py
